<resources>
    <string name="app_name">Shopping App</string>
    <string name="image_description">Just an image</string>
    <string name="greeting">Hey, Nathaniel</string>
    <string name="placeholder_text">Search Products</string>
    <string name="delivery_to">DELIVERY TO</string>
    <string name="within">WITHIN</string>
    <string name="address_here">Address here</string>
    <string name="time">1 Hour</string>
    <string name="recommended">Recommended</string>
    <string name="item_name">Item Name Here</string>
    <string name="label">item type</string>
    <string name="shop">Shop</string>
    <string name="by_category">By Category</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_sellers">Best Sellers</string>
    <string name="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="details">Details</string>
    <string name="price">$Price Here</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>