<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="20dp"
    android:layout_height="150dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        >

        <ImageView
            android:id="@+id/favoriteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_image"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_description"
            />

        <TextView
            android:id="@+id/favoriteName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            style="@style/HeadingBlack"
            android:layout_toEndOf="@id/favoriteImage"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/favoriteCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            style="@style/SubheadingBlack"
            android:layout_below="@id/favoriteName"
            android:layout_toEndOf="@id/favoriteImage"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/favoritePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/SubheadingBlack"
            android:layout_below="@id/favoriteCategory"
            android:layout_toEndOf="@id/favoriteImage"
            android:layout_marginStart="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:background="@drawable/button_style"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            />

        <ImageButton
            android:id="@+id/removeFromFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description"
            android:background="@android:color/transparent"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/baseline_remove_24" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>